--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,25 +1,79 @@
-/**
-  |============================
-  | include css partials with
-  | default @import url()
-  |============================
-*/
 @import url('./reset.css');
-@import url('./vite-promo.css');
-@import url('./header.css');
+@import url('./gallery.css');
 
-:root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
 
-  color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
+.feedback-form {
+  margin-top: 36px;
+  margin-bottom: 32px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 371px;
+  height: 40px;
+  font-family: 'Montserrat';
+  font-size: 16;
+}
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+input {
+  width: 272px;
+  height: 100%;
+  font-family: inherit;
+  padding: 8px 16px;
+  border: none;
+  border-radius: 4px;
+  outline: 1px solid #808080;
+}
+
+input:hover {
+  outline: 1px solid #000000;
+}
+
+input:active,
+input:focus {
+  outline: 1px solid #4e75ff;
+  color: #2e2f42;
+}
+
+button {
+  width: 91px;
+  height: 100%;
+  background-color: #4e75ff;
+  color: white;
+  border-radius: 8px;
+  border: none;
+  font-family: inherit;
+}
+
+button:hover {
+  background-color: #6c8cff;
+  cursor: pointer;
+}
+
+.loader {
+  margin-top: 100px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 48px;
+  height: 48px;
+  border: 5px solid #fff;
+  border-bottom-color: #ff3d00;
+  border-radius: 50%;
+  /* display: inline-block; */
+  display: block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
 }
