--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -1,15 +1,28 @@
 .gallery {
-  display: grid;
-  max-width: 1246px;
-  grid-template-columns: repeat(5, 360px);
-  grid-auto-rows: 230px;
-  grid-gap: 24px;
-  justify-content: center;
   padding: 0;
   list-style: none;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 12px;
+  margin-right: 12px;
+  max-width: 100vh;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  justify-content: center;
   flex-grow: 1;
+
+  @media (min-width: 760px) {
+    margin: 0 auto;
+    display: grid;
+    max-width: 760px;
+    grid-template-columns: repeat(3, 235px);
+    grid-gap: 24px;
+  }
+
+  @media (min-width: 1200px) {
+    max-width: 1246px;
+    grid-template-columns: repeat(5, 360px);
+    grid-auto-rows: 220px;
+  }
 }
 
 .simple-lightbox {
@@ -20,10 +33,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  max-width: 360px;
-  max-height: 200px;
   box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
     0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
+
+  @media (min-width: 1200px) {
+    max-width: 360px;
+    max-height: 200px;
+  }
 }
 
 .gallery-item:hover {
@@ -40,7 +56,7 @@
 .gallery-link {
   display: block;
   width: 100%;
-  height: 100%;
+  height: 90%;
   text-decoration: none;
 }
 
@@ -58,12 +74,19 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  font-size: 14px;
+  font-size: 12px;
   width: 100%;
   background-color: #fff;
   border-right: 1px solid #c7c2c2;
   border-bottom: 1px solid #c7c2c2;
   border-left: 1px solid #c7c2c2;
+
+  @media (min-width: 760px) {
+    font-size: 10px;
+  }
+  @media (min-width: 1200px) {
+    font-size: 14px;
+  }
 }
 
 .gallery-box {
